--- a/docs/md/pandas1.ipynb
+++ b/docs/md/pandas1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 233,
    "id": "bd056cac",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 234,
    "id": "84196c1b",
    "metadata": {},
    "outputs": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 235,
    "id": "1062fe17",
    "metadata": {},
    "outputs": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 236,
    "id": "b530ea12",
    "metadata": {},
    "outputs": [
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 237,
    "id": "7ea6db6c",
    "metadata": {},
    "outputs": [
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 238,
    "id": "aeae36b2",
    "metadata": {},
    "outputs": [
@@ -229,7 +229,30 @@
       "    state  year  pop\n",
       "3  Nevada  2001  2.4\n",
       "4  Nevada  2002  2.9\n",
-      "5  Nevada  2003  3.2\n",
+      "5  Nevada  2003  3.2\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = {'state': ['Ohio', 'Ohio', 'Ohio', 'Nevada', 'Nevada', 'Nevada'],\n",
+    "\t\t'year': [2000, 2001, 2002, 2001, 2002, 2003],\n",
+    "\t\t'pop': [1.5, 1.7, 3.6, 2.4, 2.9, 3.2]}\n",
+    "frame = pd.DataFrame(data) #字典创建DataFrame\n",
+    "print(frame)\n",
+    "print(frame.head()) #前五行\n",
+    "print(frame.tail(3)) #后3行"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 239,
+   "id": "7d7dff12",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "   year   state  pop\n",
       "0  2000    Ohio  1.5\n",
       "1  2001    Ohio  1.7\n",
@@ -249,22 +272,6 @@
     }
    ],
    "source": [
-    "data = {'state': ['Ohio', 'Ohio', 'Ohio', 'Nevada', 'Nevada', 'Nevada'],\n",
-    "\t\t'year': [2000, 2001, 2002, 2001, 2002, 2003],\n",
-    "\t\t'pop': [1.5, 1.7, 3.6, 2.4, 2.9, 3.2]}\n",
-    "frame = pd.DataFrame(data) #字典创建DataFrame\n",
-    "print(frame)\n",
-    "print(frame.head()) #前五行\n",
-    "print(frame.tail(3)) #后3行"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7d7dff12",
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "print(pd.DataFrame(data, columns=['year', 'state', 'pop'])) #指定列顺序\n",
     "frame2 = pd.DataFrame(data, columns=['year', 'state', 'pop', 'debt'], index=['one', 'two', 'three', 'four', 'five', 'six']) #指定列顺序和索引\n",
     "print(frame2)\n",
@@ -274,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 240,
    "id": "b3153f05",
    "metadata": {},
    "outputs": [
@@ -313,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 241,
    "id": "0df47ff1",
    "metadata": {},
    "outputs": [
@@ -347,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 242,
    "id": "b3aebd5f",
    "metadata": {},
    "outputs": [
@@ -386,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 243,
    "id": "eeb2b4fc",
    "metadata": {},
    "outputs": [
@@ -471,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 244,
    "id": "47e4b81c",
    "metadata": {},
    "outputs": [
@@ -512,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 245,
    "id": "29c2809d",
    "metadata": {},
    "outputs": [
@@ -542,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 246,
    "id": "9463093b",
    "metadata": {},
    "outputs": [],
