--- a/docs/md/pandas1.ipynb
+++ b/docs/md/pandas1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 212,
    "id": "bd056cac",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 213,
    "id": "84196c1b",
    "metadata": {},
    "outputs": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 214,
    "id": "1062fe17",
    "metadata": {},
    "outputs": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 215,
    "id": "b530ea12",
    "metadata": {},
    "outputs": [
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 216,
    "id": "7ea6db6c",
    "metadata": {},
    "outputs": [
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 217,
    "id": "aeae36b2",
    "metadata": {},
    "outputs": [
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 218,
    "id": "7d7dff12",
    "metadata": {},
    "outputs": [
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 219,
    "id": "b3153f05",
    "metadata": {},
    "outputs": [
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 220,
    "id": "0df47ff1",
    "metadata": {},
    "outputs": [
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 221,
    "id": "b3aebd5f",
    "metadata": {},
    "outputs": [
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 222,
    "id": "eeb2b4fc",
    "metadata": {},
    "outputs": [
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 223,
    "id": "47e4b81c",
    "metadata": {},
    "outputs": [
@@ -519,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 224,
    "id": "29c2809d",
    "metadata": {},
    "outputs": [
@@ -549,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 225,
    "id": "9463093b",
    "metadata": {},
    "outputs": [],
@@ -583,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 226,
    "id": "e4c03296",
    "metadata": {},
    "outputs": [
@@ -645,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 227,
    "id": "eefbf89e",
    "metadata": {},
    "outputs": [
@@ -704,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 228,
    "id": "902f3ce7",
    "metadata": {},
    "outputs": [
@@ -763,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 229,
    "id": "6795bcd8",
    "metadata": {},
    "outputs": [
@@ -794,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 230,
    "id": "2b24ebc7",
    "metadata": {},
    "outputs": [
@@ -845,7 +845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 231,
    "id": "c0beeb18",
    "metadata": {},
    "outputs": [
@@ -886,7 +886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 232,
    "id": "654eaafb",
    "metadata": {},
    "outputs": [
@@ -928,7 +928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 233,
    "id": "294d37f4",
    "metadata": {},
    "outputs": [
@@ -983,7 +983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 234,
    "id": "511feb90",
    "metadata": {},
    "outputs": [
@@ -1021,7 +1021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 235,
    "id": "9ee16648",
    "metadata": {},
    "outputs": [
@@ -1051,7 +1051,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 236,
    "id": "6d9036e0",
    "metadata": {},
    "outputs": [
@@ -1073,7 +1073,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 237,
    "id": "cf2c2ee2",
    "metadata": {},
    "outputs": [
@@ -1107,7 +1107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 238,
    "id": "20e90517",
    "metadata": {},
    "outputs": [
@@ -1150,7 +1150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 239,
    "id": "466bcb3e",
    "metadata": {},
    "outputs": [
@@ -1185,7 +1185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 240,
    "id": "b722898f",
    "metadata": {},
    "outputs": [
@@ -1193,20 +1193,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "        b   d   e\n",
-      "Utah    0   1   2\n",
-      "Ohio    3   4   5\n",
-      "Texa    6   7   8\n",
-      "Oregon  9  10  11\n",
-      "b    0\n",
-      "d    1\n",
-      "e    2\n",
-      "Name: Utah, dtype: int64\n",
-      "        b  d  e\n",
-      "Utah    0  0  0\n",
-      "Ohio    3  3  3\n",
-      "Texa    6  6  6\n",
-      "Oregon  9  9  9\n"
+      "          b     d     e\n",
+      "Utah    0.0   1.0   2.0\n",
+      "Ohio    3.0   4.0   5.0\n",
+      "Texa    6.0   7.0   8.0\n",
+      "Oregon  9.0  10.0  11.0\n",
+      "b    0.0\n",
+      "d    1.0\n",
+      "e    2.0\n",
+      "Name: Utah, dtype: float64\n",
+      "          b    d    e\n",
+      "Utah    0.0  0.0  0.0\n",
+      "Ohio    3.0  3.0  3.0\n",
+      "Texa    6.0  6.0  6.0\n",
+      "Oregon  9.0  9.0  9.0\n"
      ]
     }
    ],
@@ -1228,7 +1228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 241,
    "id": "122cdafe",
    "metadata": {},
    "outputs": [
@@ -1236,21 +1236,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "        b   d   e\n",
-      "Utah    0   1   2\n",
-      "Ohio    3   4   5\n",
-      "Texa    6   7   8\n",
-      "Oregon  9  10  11\n",
-      "Utah       1\n",
-      "Ohio       4\n",
-      "Texa       7\n",
-      "Oregon    10\n",
-      "Name: d, dtype: int64\n",
-      "        b  d  e\n",
-      "Utah   -1  0  1\n",
-      "Ohio   -1  0  1\n",
-      "Texa   -1  0  1\n",
-      "Oregon -1  0  1\n"
+      "          b     d     e\n",
+      "Utah    0.0   1.0   2.0\n",
+      "Ohio    3.0   4.0   5.0\n",
+      "Texa    6.0   7.0   8.0\n",
+      "Oregon  9.0  10.0  11.0\n",
+      "Utah       1.0\n",
+      "Ohio       4.0\n",
+      "Texa       7.0\n",
+      "Oregon    10.0\n",
+      "Name: d, dtype: float64\n",
+      "          b    d    e\n",
+      "Utah   -1.0  0.0  1.0\n",
+      "Ohio   -1.0  0.0  1.0\n",
+      "Texa   -1.0  0.0  1.0\n",
+      "Oregon -1.0  0.0  1.0\n"
      ]
     }
    ],
