--- a/docs/md/daanpy.ipynb
+++ b/docs/md/daanpy.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 47,
    "id": "fc19bc18",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 48,
    "id": "11f8e8df",
    "metadata": {},
    "outputs": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 49,
    "id": "0f96f1a5",
    "metadata": {},
    "outputs": [
@@ -108,7 +108,7 @@
      "text": [
       "<>:4: SyntaxWarning: invalid escape sequence '\\s'\n",
       "<>:4: SyntaxWarning: invalid escape sequence '\\s'\n",
-      "/tmp/ipykernel_31939/1436999290.py:4: SyntaxWarning: invalid escape sequence '\\s'\n",
+      "/tmp/ipykernel_1860/1436999290.py:4: SyntaxWarning: invalid escape sequence '\\s'\n",
       "  result = pd.read_table('examples/ex3.txt', sep='\\s+') #用正则表达式作为分隔符读取文本文件，\\s+表示多个空格\n"
      ]
     }
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 50,
    "id": "252d6cb2",
    "metadata": {},
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 51,
    "id": "261ead75",
    "metadata": {},
    "outputs": [
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 52,
    "id": "067653e1",
    "metadata": {},
    "outputs": [
@@ -223,7 +223,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<pandas.io.parsers.readers.TextFileReader object at 0x7f6a6899fec0>\n",
+      "<pandas.io.parsers.readers.TextFileReader object at 0x7f79e9b141a0>\n",
       "key\n",
       "E    368\n",
       "X    364\n",
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 53,
    "id": "e929c9be",
    "metadata": {},
    "outputs": [
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 54,
    "id": "20b7a1ef",
    "metadata": {},
    "outputs": [
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 55,
    "id": "4049896f",
    "metadata": {},
    "outputs": [
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 56,
    "id": "88b4a8d5",
    "metadata": {},
    "outputs": [
@@ -482,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 57,
    "id": "18c0ec17",
    "metadata": {},
    "outputs": [],
@@ -500,69 +500,322 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e725bb9f",
+   "execution_count": 58,
+   "id": "56e74638",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   a   b   c   d message\n",
+      "0  1   2   3   4   hello\n",
+      "1  5   6   7   8   world\n",
+      "2  9  10  11  12     foo\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>a</th>\n",
+       "      <th>b</th>\n",
+       "      <th>c</th>\n",
+       "      <th>d</th>\n",
+       "      <th>message</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>hello</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>5</td>\n",
+       "      <td>6</td>\n",
+       "      <td>7</td>\n",
+       "      <td>8</td>\n",
+       "      <td>world</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>9</td>\n",
+       "      <td>10</td>\n",
+       "      <td>11</td>\n",
+       "      <td>12</td>\n",
+       "      <td>foo</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   a   b   c   d message\n",
+       "0  1   2   3   4   hello\n",
+       "1  5   6   7   8   world\n",
+       "2  9  10  11  12     foo"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "import websocket, json, time, jieba\n",
-    "from wordcloud import WordCloud\n",
-    "import matplotlib.pyplot as plt\n",
-    "from collections import Counter\n",
+    "frame = pd.read_csv('examples/ex1.csv')\n",
+    "print(frame)\n",
+    "frame.to_pickle('examples/frame_pickle') #将DataFrame存储为pickle格式的文件\n",
+    "pd.read_pickle('examples/frame_pickle') #从pickle格式的文件读取DataFrame"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1fd2b679",
+   "metadata": {},
+   "source": [
+    "### 使用HDF5格式"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "18e62b6c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "           a\n",
+      "0  -0.501809\n",
+      "1  -2.468277\n",
+      "2  -1.097029\n",
+      "3   1.083563\n",
+      "4  -1.473387\n",
+      "..       ...\n",
+      "95  1.902708\n",
+      "96 -0.432740\n",
+      "97  0.855250\n",
+      "98  0.168788\n",
+      "99 -0.096917\n",
+      "\n",
+      "[100 rows x 1 columns]\n",
+      "0    -0.501809\n",
+      "1    -2.468277\n",
+      "2    -1.097029\n",
+      "3     1.083563\n",
+      "4    -1.473387\n",
+      "        ...   \n",
+      "95    1.902708\n",
+      "96   -0.432740\n",
+      "97    0.855250\n",
+      "98    0.168788\n",
+      "99   -0.096917\n",
+      "Name: a, Length: 100, dtype: float64\n",
+      "<class 'pandas.io.pytables.HDFStore'>\n",
+      "File path: mydata.h5\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "frame = pd.DataFrame({'a': np.random.randn(100)})\n",
+    "store = pd.HDFStore('mydata.h5') #创建HDF5文件\n",
+    "store['obj1'] = frame #将DataFrame存储为HDF5格式\n",
+    "print(store['obj1']) #从HDF5文件读取DataFrame\n",
+    "store['obj1_col'] = frame['a'] #将DataFrame的一列存储为HDF5格式\n",
+    "print(store['obj1_col']) #从HDF5文件读取DataFrame的一列\n",
+    "print(store) #显示HDF5文件中的所有对象\n",
+    "store.close() #关闭HDF5文件"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ed59233e",
+   "metadata": {},
+   "source": [
+    "### 读取Excel文件"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "e802624a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Sheet1']\n",
+      "   Unnamed: 0  a   b   c   d message\n",
+      "0           0  1   2   3   4   hello\n",
+      "1           1  5   6   7   8   world\n",
+      "2           2  9  10  11  12     foo\n",
+      "   Unnamed: 0  a   b   c   d message\n",
+      "0           0  1   2   3   4   hello\n",
+      "1           1  5   6   7   8   world\n",
+      "2           2  9  10  11  12     foo\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_1860/851877596.py:7: FutureWarning: Starting with pandas version 3.0 all arguments of to_excel except for the argument 'excel_writer' will be keyword-only.\n",
+      "  frame.to_excel(writer, 'Sheet1') #将DataFrame写入指定工作表\n"
+     ]
+    }
+   ],
+   "source": [
+    "xlsx = pd.ExcelFile('examples/ex1.xlsx') #读取Excel文件\n",
+    "print(xlsx.sheet_names) #显示所有工作表的名称\n",
+    "print(pd.read_excel(xlsx, 'Sheet1')) #读取指定工作表\n",
+    "frame = pd.read_excel('examples/ex1.xlsx', 'Sheet1') #直接读取指定工作表\n",
+    "print(frame)\n",
+    "writer = pd.ExcelWriter('examples/ex2.xlsx') #创建Excel写入对象\n",
+    "frame.to_excel(writer, 'Sheet1') #将DataFrame写入指定工作表\n",
+    "with pd.ExcelWriter('examples/ex2.xlsx') as writer:\n",
+    "    frame.to_excel(writer, sheet_name='Sheet1', index=False)\n",
+    "# 离开 with 块时自动保存并关闭\n",
+    "frame.to_excel('examples/ex2.xlsx')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4974815c",
+   "metadata": {},
+   "source": [
+    "## 与Web API交互"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "efb76804",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<Response [200]>\n",
+      "BUG: use `make altinstall` in debug Dockerfile to avoid overwriting system python3\n",
+      "    number                                              title  \\\n",
+      "0    62272  BUG: use `make altinstall` in debug Dockerfile...   \n",
+      "1    62271  ERR: Improve error message for deprecated freq...   \n",
+      "2    62270  CLN: Enforce deprecation of PeriodIndex in res...   \n",
+      "3    62269                 CLN: Apply ruff format to scripts/   \n",
+      "4    62268  ENH: Make ExtensionDtype.numpy_dtype part of t...   \n",
+      "..     ...                                                ...   \n",
+      "25   62232  DEPR: Remove special date-datetime64 case in i...   \n",
+      "26   62227  BUG: rank with object dtype and small values #...   \n",
+      "27   62226  fix : include datatype in memo key in sanitiza...   \n",
+      "28   62225  DOC: Fix linkcode_resolve for inherited proper...   \n",
+      "29   62222  Remove custom footer template in favor of them...   \n",
+      "\n",
+      "                                               labels state  \n",
+      "0                                                  []  open  \n",
+      "1                                                  []  open  \n",
+      "2                                                  []  open  \n",
+      "3   [{'id': 48070600, 'node_id': 'MDU6TGFiZWw0ODA3...  open  \n",
+      "4   [{'id': 76812, 'node_id': 'MDU6TGFiZWw3NjgxMg=...  open  \n",
+      "..                                                ...   ...  \n",
+      "25                                                 []  open  \n",
+      "26                                                 []  open  \n",
+      "27                                                 []  open  \n",
+      "28                                                 []  open  \n",
+      "29                                                 []  open  \n",
+      "\n",
+      "[30 rows x 4 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
     "\n",
-    "room_id = \"21414905\"          # 换成你的直播间号\n",
-    "danmu_list = []             # 实时弹幕池\n",
-    "\n",
-    "# ---------- 1. 连上弹幕服务器 ----------\n",
-    "def on_open(ws):\n",
-    "    # 官方握手包格式\n",
-    "    auth = {\"uid\": 0, \"roomid\": int(room_id), \"protover\": 3, \"platform\": \"web\"}\n",
-    "    ws.send(json.dumps(auth).encode())\n",
-    "\n",
-    "def on_message(ws, msg):\n",
-    "    # 只提取普通弹幕\n",
-    "    if \"DANMU_MSG\" in str(msg):\n",
-    "        info = json.loads(msg)\n",
-    "        dm = info[\"info\"][1]          # 弹幕文本\n",
-    "        danmu_list.append(dm)\n",
-    "        print(dm)                     # 终端实时打印\n",
-    "\n",
-    "# ---------- 2. 每 30 秒画一次图 ----------\n",
-    "def plot():\n",
-    "    while True:\n",
-    "        time.sleep(30)\n",
-    "        if not danmu_list:\n",
-    "            continue\n",
-    "        text = \" \".join(danmu_list)\n",
-    "        words = jieba.lcut(text)\n",
-    "\n",
-    "        # 词云\n",
-    "        wc = WordCloud(font_path=\"simhei.ttf\", background_color=\"white\",\n",
-    "                       width=600, height=400).generate(\" \".join(words))\n",
-    "        plt.subplot(1, 2, 1)\n",
-    "        plt.imshow(wc, interpolation=\"bilinear\")\n",
-    "        plt.axis(\"off\"); plt.title(\"弹幕词云\")\n",
-    "\n",
-    "        # 折线图：每分钟弹幕量\n",
-    "        plt.subplot(1, 2, 2)\n",
-    "        bucket = [i//60 for i in range(len(danmu_list))]\n",
-    "        counter = Counter(bucket)\n",
-    "        plt.plot(counter.keys(), counter.values(), marker=\"o\")\n",
-    "        plt.title(\"每分钟弹幕数\"); plt.xlabel(\"分钟\"); plt.ylabel(\"条数\")\n",
-    "\n",
-    "        plt.tight_layout(); plt.pause(0.1)   # 实时刷新\n",
-    "        plt.savefig(\"danmu_live.png\")        # 同时保存截图\n",
-    "\n",
-    "# ---------- 3. 启动 ----------\n",
-    "if __name__ == \"__main__\":\n",
-    "    import threading\n",
-    "    threading.Thread(target=plot, daemon=True).start()\n",
-    "\n",
-    "    url = \"wss://broadcastlv.chat.bilibili.com/sub\"\n",
-    "    ws = websocket.WebSocketApp(url,\n",
-    "                                on_open=on_open,\n",
-    "                                on_message=on_message)\n",
-    "    ws.run_forever()"
+    "url = 'https://api.github.com/repos/pandas-dev/pandas/issues'\n",
+    "resp = requests.get(url) #发送GET请求\n",
+    "print(resp) #显示响应状态码\n",
+    "data = resp.json() #将响应内容解析为JSON格式\n",
+    "print(data[0]['title']) #显示第一个问题的标题\n",
+    "issues = pd.DataFrame(data, columns=['number', 'title', 'labels', 'state']) #将JSON数据转换为DataFrame\n",
+    "print(issues) #显示DataFrame"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "80d9bb10",
+   "metadata": {},
+   "source": [
+    "## 与数据库交互"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "8535edcd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('one', 'two', 3.0, 4), ('five', 'six', 7.0, 8), ('nine', 'ten', 11.0, 12), ('Atlanta', 'Georgia', 1.25, 6), ('Tallahassee', 'Florida', 2.6, 3), ('Sacramento', 'California', 1.7, 5)]\n",
+      "(('a', None, None, None, None, None, None), ('b', None, None, None, None, None, None), ('c', None, None, None, None, None, None), ('d', None, None, None, None, None, None))\n",
+      "             a           b      c   d\n",
+      "0          one         two   3.00   4\n",
+      "1         five         six   7.00   8\n",
+      "2         nine         ten  11.00  12\n",
+      "3      Atlanta     Georgia   1.25   6\n",
+      "4  Tallahassee     Florida   2.60   3\n",
+      "5   Sacramento  California   1.70   5\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sqlite3\n",
+    "query = \"\"\"CREATE TABLE test (a VARCHAR(20), b VARCHAR(20), c REAL, d INTEGER);\n",
+    "INSERT INTO test VALUES ('one', 'two', 3.0, 4);\n",
+    "INSERT INTO test VALUES ('five', 'six', 7.0, 8);\n",
+    "INSERT INTO test VALUES ('nine', 'ten', 11.0, 12);\n",
+    "\"\"\"\n",
+    "con = sqlite3.connect(':memory:') #创建内存中的SQLite数据库\n",
+    "con.executescript(query) #执行多条SQL语句\n",
+    "con.commit() #提交事务\n",
+    "data = [('Atlanta', 'Georgia', 1.25, 6), ('Tallahassee', 'Florida', 2.6, 3), ('Sacramento', 'California', 1.7, 5)]\n",
+    "stmt = \"INSERT INTO test VALUES (?, ?, ?, ?)\"\n",
+    "con.executemany(stmt, data) #执行多条SQL语句\n",
+    "con.commit() #提交事务\n",
+    "cursor = con.execute('select * from test') #执行查询语句\n",
+    "rows = cursor.fetchall() #获取所有查询结果\n",
+    "print(rows)\n",
+    "print(cursor.description) #显示查询结果的列信息\n",
+    "print(pd.DataFrame(rows, columns=[x[0] for x in cursor.description])) #将查询结果转换为DataFrame\n",
+    "import sqlalchemy as sqlal\n",
+    "db = sqlal.create_engine('sqlite:///:mydata.sqlite') #创建内存中的SQLite数据库"
    ]
   }
  ],
