--- a/docs/md/pandas1.ipynb
+++ b/docs/md/pandas1.ipynb
@@ -938,7 +938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 297,
+   "execution_count": null,
    "id": "294d37f4",
    "metadata": {},
    "outputs": [
@@ -962,9 +962,9 @@
     }
    ],
    "source": [
-    "print(data.loc['Colorado', ['two', 'three']])\n",
-    "print(data.iloc[2, [3, 0, 1]])\n",
-    "print(data.iloc[2])"
+    "print(data.loc['Colorado', ['two', 'three']]) #通过标签取值\n",
+    "print(data.iloc[2, [3, 0, 1]]) #通过位置取值\n",
+    "print(data.iloc[2]) #通过位置取整行"
    ]
   },
   {
