--- a/docs/md/daanpy2.ipynb
+++ b/docs/md/daanpy2.ipynb
@@ -1353,7 +1353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "id": "69afcb1e",
    "metadata": {},
    "outputs": [
@@ -1377,7 +1377,7 @@
    ],
    "source": [
     "text = 'foo    bar\\t baz  \\tqux'\n",
-    "print(re.split('\\s+', text))"
+    "print(re.split('\\s+', text)) "
    ]
   },
   {
@@ -1421,7 +1421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "id": "df7129b3",
    "metadata": {},
    "outputs": [
@@ -1463,6 +1463,26 @@
    ],
    "source": [
     "print(data.isnull) #未完成"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "3ad4d6de",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e283fca3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a.plot(np.arange(10))"
    ]
   }
  ],
